--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://www.instagram.com/" />
+<meta http-equiv="refresh" content="0; url=https://www.instagram.com/reel/C-2yPsOIuNe/?igsh=MW1zeGQ1MzdsdDlmbw==" />
 </head>
 <body>
 
-<p>Jika Anda tidak dialihkan secara otomatis, klik <a href="https://www.instagram.com/">di sini</a>.</p>
+<p>Jika Anda tidak dialihkan secara otomatis, klik <a href="https://www.instagram.com/reel/C-2yPsOIuNe/?igsh=MW1zeGQ1MzdsdDlmbw==">di sini</a>.</p>
 
 </body>
 </html>
